@@ -1,3 +1,8 @@
+2006-10-08  ARAKI Yasuhiro  <yasu@debian.or.jp>
+
+	* donrails/app/models/article_sweeper.rb 
+	(ArticleSweeper::expire_for): Fix to clear article when Picture/Enrollment update.
+
 2006-10-07  Akira TAGOH  <at@gclab.org>
 
 	IMPORTANT: incompatible changes. BASEURL doesn't include the paths
